--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,6 +3,7 @@
     font-size: 2em;
     justify-content: center;
     align-items: center;
+    height: 0px;
 }
 
 ul {
@@ -98,7 +99,7 @@ ul {
       width: 100%;
       height: 400px;
       position: relative;
-      top: -700px;
+      top: -500px;
       left: -100%;
       transition: all 0.5s ease;
     }
